// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea TextArea should support disable 1`] = `
<div>
  <textarea
    disabled=""
  />
</div>
`;

exports[`TextArea TextArea should support maxLength 1`] = `
<div>
  <textarea
    maxlength="10"
  />
</div>
`;
